--- a/style.css
+++ b/style.css
@@ -192,6 +192,13 @@ header {
     background-color: #00aed1;
 }
 }
+@media screen and (max-width: 480px ){
+  .image{
+      height: 50px;
+      width:50px
+
+  }
+}
 
 /*awards styling*/
 #row {
