--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ body {
       font-size: 3.5rem;
       line-height: 1.2;
     }
+    #image{
+      height: 480px;
+      width:  480px;
+
+  }
   }
   
   h2 {
@@ -191,13 +196,6 @@ header {
     z-index: 1;
     background-color: #00aed1;
 }
-}
-@media screen and (max-width: 480px ){
-  .image{
-      height: 50px;
-      width:50px;
-
-  }
 }
 
 /*awards styling*/
