--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     margin-bottom: 0;
   }
   
-  @media (max-width: 460px) {
+  @media screen and (max-width: 460px) {
     h1 {
       font-size: 3.5rem;
       line-height: 1.2;
