--- a/style.css
+++ b/style.css
@@ -24,12 +24,13 @@ body {
   
   @media screen and (max-width: 460px) {
     h1 {
-      font-size: 3.5rem;
-      line-height: 1.2;
+      font-size: 3.0rem;
+      line-height: 1.0;
     }
     #image{
-      height: 480px;
-      width:  480px;
+      height: 360px;
+      width:  360px;
+      justify-content: space-around;
 
   }
   }
