--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
   
   @media screen and (max-width: 460px) {
     h1 {
-      line-height: 0.8;
-      font-size:medium;
+      line-height: 1;
+      font-size:small;
     }
     #image{
       height: 360px;
