--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ body {
       height: 360px;
       width:  460px;
   }
+    header{ 
+      position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: #00aed1;
+    }
   }
   
   h2 {
