--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ header {
 }
 body {
   font-family: Arial;
-  font-size: 25px;
+  font-size: 1rem;
   line-height: 1.5;
   text-align: center;
   color: #333;
