--- a/style.css
+++ b/style.css
@@ -197,6 +197,13 @@ body {
   background-color: #faf8eb;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: #00aed1;
+}
 }
 
 /*awards styling*/
