--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   }
   
 header {
-    position: none;
+    position: fixed;
     top: 0;
     width: 100%;
     z-index: 1;
@@ -198,11 +198,12 @@ body {
 }
 
 header {
-  position: none;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
   background-color: #00aed1;
+  display: none;
 }
 }
 
