--- a/style.css
+++ b/style.css
@@ -214,6 +214,10 @@ header {
   box-shadow: 5px 10px 14px rgba(81, 82, 82, 0.4);
   display:inline-block;
 }
+.video{
+  width: 300;
+  height: 350;
+}
 }
 
 /*awards styling*/
