--- a/style.css
+++ b/style.css
@@ -221,6 +221,12 @@ header {
   width: 250;
   height: 300;
 }
+.overlay-content a {
+  color: rgb(0, 0, 0);
+  padding: 10px 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
 
 }
 
