--- a/style.css
+++ b/style.css
@@ -177,6 +177,9 @@ header {
   
 }
 @media  (max-width: 572px ){
+  #title{
+    font-size: medium;
+  }
 #image{
     height: 350px;
     width:350px;
@@ -202,7 +205,7 @@ header {
 }
 #row {
   justify-content: space-around;
-  margin: 20px -60px 20px 0px;
+  margin: 20px -60px 20px -10px;
   padding-bottom: 40px;
   
 }
