--- a/style.css
+++ b/style.css
@@ -272,8 +272,15 @@
       font-size: 15px;
       font-weight: bold;
     }
-    .video{
-      width: 300;
-      height: 350;
+    .video iframe{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .video p{
+      font-size: medium;
+
     }
     }
