--- a/style.css
+++ b/style.css
@@ -273,14 +273,11 @@
       font-weight: bold;
     }
     .video iframe{
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
     }
     .video p{
-      font-size: medium;
+      font-size: 25px;
 
     }
     }
