--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@
       font-weight: bold;
     }
     .video iframe{
-     
-      height: 250%;
+      width: 100%;
+      height: 500%;
     }
     .video p{
       font-size: 25px;
