--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@
     }
     .video iframe{
       width: 100%;
-      height: 500%;
+      height: 10em;
     }
     .video p{
       font-size: 25px;
