--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@
       font-weight: bold;
     }
     .video iframe{
-      width: 100%;
-      height: 10em;
+      width: 300;
+      height: 350;
     }
     .video p{
       font-size: 25px;
