--- a/style.css
+++ b/style.css
@@ -272,14 +272,16 @@
       font-size: 15px;
       font-weight: bold;
     }
+    .video{
+      justify-content: center;
+    }
     .video iframe{
       width: 100%;
       height: 400px;
       margin: 0;
-      justify-content: center;
     }
     .video p{
       font-size: 25px;
-
+      text-align: center;
     }
     }
