--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@
     .video iframe{
       width: 100%;
       height: 400px;
-      margin: 0;
+      justify-content: center;
     }
     .video p{
       font-size: 25px;
